Add target="_blank" to calendar link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="mini-calendar/index.html">calendrier</a>
+    <a href="mini-calendar/index.html" target="_blank">calendrier</a>
 </body>
 </html>
