--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="mini-calendar/index.html" target="_blank">calendrier</a>
-    <a href="Qrcode-Generator/index.html" target="_blank">QR code generator</a>
+    <a href="qrcode-generator/index.html" target="_blank">QR code generator</a>
 </body>
 </html>
