🎨 Update index.html with new project links

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href="mini-calendar/index.html" target="_blank">calendrier</a>
-    <a href="qrcode-generator/index.html" target="_blank">QR code generator</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Petit Projets</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Voici mes différents petit projets :</h1>
+    <div class="allLink">
+      <a href="mini-calendar/index.html" target="_blank">calendrier</a>
+      <a href="qrcode-generator/index.html" target="_blank"
+        >QR code generator</a
+      >
+      <a href="meteo-api/index.html" target="_blank">Meteo API</a>
+    </div>
+  </body>
 </html>
