✨ Add todo-list feature

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         >QR code generator</a
       >
       <a href="meteo-api/index.html" target="_blank">Meteo API</a>
+      <a href="todo-list/index.html" target="_blank">Todo list</a>
     </div>
   </body>
 </html>
